--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "SimPL-2.0",
   "devDependencies": {
     "angular": "^1.4.1",
+    "angular-ui-sortable": "^0.13.4",
     "angularfire": "^1.1.2",
     "bootstrap": "^3.3.5",
     "browser-sync": "^2.7.12",
@@ -15,6 +16,7 @@
     "gulp-less": "^3.0.3",
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "jquery": "^2.1.4"
   }
 }
